# A-Fast-Index-free-Subsequence-Matching-Algorithm-for-Dynamic-Time-Warping

./: CMakeLists.txt  ED.cpp  IP.cpp  LB_KK.cpp  LB_PETITJEAN.cpp  LB_q.cpp  LB_t.cpp  README.md  compute_M.cpp  def.h  dot_mul.cpp  dtw.cpp  ele_multi.cpp  ele_plus.cpp  fftw3.h  funcs.h  lb_data.cpp  lower_upper_lemire.cpp  main.cpp  mask_T.cpp  mvmean.cpp  mvsum.cpp  normal_cdf.cpp  sip.cpp  table_of_q.cpp
binaryfile/: file2binary.cpp  readbinary.cpp
data/: bi_allecg.txt
data/q/: query_0.txt  query_1.txt  query_2.txt  query_3.txt  query_4.txt  query_5.txt  query_6.txt  query_7.txt  query_8.txt  query_9.txt
lib/: libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib
